Fix spacing for

--- a/src/pages/BorrowSection/OpportunityDetails/opportunityDetails.scss
+++ b/src/pages/BorrowSection/OpportunityDetails/opportunityDetails.scss
@@ -16,7 +16,7 @@
 
   .fee-details {
     text-align: center;
-    margin: $s-normal 0 $s-small;
+    margin: $s-normal $s-small;
     font-size: 12px;
   }
 
